@@ -183,12 +183,14 @@
             "gerudo_archer_1": {
                 "x": "26.0%",
                 "y": "28.0%",
-                "era": "adult"
+                "era": "adult",
+                "time": "day"
             },
             "gerudo_archer_2": {
                 "x": "23.5%",
                 "y": "28.0%",
-                "era": "adult"
+                "era": "adult",
+                "time": "day"
             },
             "desert_chest": {
                 "x": "14.0%",
